--- a/css/style.css
+++ b/css/style.css
@@ -123,30 +123,30 @@ header{
 }
 /* fine banner */
 
-.maintop{
+.main_one{
   height: 500px;
 }
-.maintop_col{
+.main_one_col{
   position: relative;
   width: 33%;
   text-align: center;
 }
-.maintop_col > img{
+.main_one_col > img{
   height:200px;
   margin-top: 30px;
 }
-.maintop_col > h3{
+.main_one_col > h3{
   color: #82BE0F;
   font-size: 35px;
   margin: 15px 0;
 }
-.maintop_col > hr{
+.main_one_col > hr{
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   width: 20%;
 }
-.maintop_col > p{
+.main_one_col > p{
   font-size: 20px;
   padding: 20px;
 }
@@ -156,50 +156,48 @@ header{
   width: 100%;
 }
 /* separazione main */
-.mainbottom{
+.main_two{
   height: 500px;
   padding: 15px;
 }
-.mainbottom_col{
+.main_two_col{
   width: 50%;
 }
-.mainbottom_col > img{
+.main_two_col > img{
   height:400px;
 
 }
-.mainbottom_col > h3{
+.main_two_col > h3{
   font-size: 35px;
   margin-top: 30px;
 }
-.mainbottom_col > p{
+.main_two_col > p{
   font-size: 30px;
   margin: 30px 0;
 }
-.mainbottom_col > a{
+.main_two_col > a{
   font-size: 30px;
 }
-.mainbottom_col >a:hover{
+.main_two_col >a:hover{
   color:#f8b71c;
 }
 
-/* REGOLE DEL FOOTER */
-footer{
-  background-color: #D3D3D3;
-}
-.footer{
+/* REGOLE DEL main_three */
+.main_three{
   position: relative;
   width: 100%;
   height: 200px;
   display: inline-block;
+  background-color: #D3D3D3;
 }
-.footer_left{
+.main_three_left{
   width: 50%;
   position: absolute;
   top:50%;
   left: 200px;
   transform: translateY(-50%);
 }
-.footer_right{
+.main_three_right{
   width: 50%;
   position: absolute;
   top:50%;
@@ -207,15 +205,15 @@ footer{
   transform: translateY(-50%);
   text-align: right;
 }
-.footer_right span{
+.main_three_right span{
   width: 50%;
   display: inline;
 }
-.footer_right p{
+.main_three_right p{
   text-decoration: underline;
   display: inline;
 }
-.footer_right button{
+.main_three_right button{
   margin-top: 0;
 }
 /* TASTO HELP */
